added gtag and meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ruler.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Author: Michael Navasardyan, Category: Tools & Docs, Description: Privacy Policy of the On-screen Ruler Chrome Extension"
+    />
+    <meta
+      name="google-site-verification"
+      content="oKcgmON-ywG-URRMl98W-eX5-TkXRIo_eyLLz9dapmc"
+    />
     <title>Ruler | Privacy Policy of the Chrome Extension</title>
   </head>
   <body>
